infra/openlineage/k8s/25-marquez-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marquez-web
  namespace: openlineage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marquez-web
  template:
    metadata:
      labels:
        app: marquez-web
    spec:
      containers:
        - name: marquez-web
          image: marquezproject/marquez-web:0.50.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: marquez-web
  namespace: openlineage
spec:
  selector:
    app: marquez-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
