infra/openlineage/k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marquez-ingress
  namespace: openlineage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: marquez.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marquez-web
                port:
                  number: 3000
